@@ -11,6 +11,7 @@ Minor changes
  * Avoid crash in image widget
  * Avoid issue in identifying spacing in 1D->2D conversion
  * Add Gnuplot 2D data import plugin (Joerg Meyer)
+ * When loading data from import plugins, provide default values
 
 Changes in 1.23:
  * Add new export dialog box which can export multiple pages and
